--- a/1a/n1/240912-js/index.html
+++ b/1a/n1/240912-js/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Exercícios - 12/9/24</h1>
+    <h2>Agora focar em exercícios simples e pontuais</h2>
 
     <hr>
     <h2>Idade do cachorro</h2>
