add exercícios beecrowd

--- a/1a/n1/240912-js/index.html
+++ b/1a/n1/240912-js/index.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Ex-JS</title>
 </head>
 <body>
-    <h1>Exercícios - 12/9/24</h1>
+    <header id="titulo">
+        <h1>Exercícios - 12/9/24</h1>
+    </header>
     <h2>Agora focar em exercícios simples e pontuais</h2>
 
+    <hr>
+        <h2>Beecrowd 1008</h2>
     <hr>
     <h2>Idade do cachorro</h2>
     <label for="inpCachorro">Idade do cachorro </label>
