--- a/1a/n1/241010-ex-array/index.html
+++ b/1a/n1/241010-ex-array/index.html
@@ -7,6 +7,14 @@
 </head>
 <body>
     <button onclick="executar83()">Ex8.3</button>
+    <button onclick="executar83b()">Ex8.3b</button>
+    <button onclick="mostrarArray()">Mostrar Array</button>
+    <button onclick="pesquisar()">Pesquisar</button>
+
+    <div id="resultado">
+        eu estou !vazia
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
