add crud com context e router 2aV1

--- a/1a/n1/241010-ex-array/index.html
+++ b/1a/n1/241010-ex-array/index.html
@@ -10,6 +10,7 @@
     <button onclick="executar83b()">Ex8.3b</button>
     <button onclick="mostrarArray()">Mostrar Array</button>
     <button onclick="pesquisar()">Pesquisar</button>
+    <button onclick="pesquisarComFor()">Pesquisar com for</button>
 
     <div id="resultado">
         eu estou !vazia
