--- a/2a/v2-cod/exercicios_old/index.html
+++ b/2a/v2-cod/exercicios_old/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="pt-br">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/gis--map-route.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Context+router</title>
+    <title>Vite + React</title>
   </head>
   <body>
     <div id="root"></div>
